// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`print-config snapshots > backend 1`] = `
{
  "categories": {},
  "env": {
    "builtin": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "plugins": [
    "unicorn",
    "typescript",
    "oxc",
  ],
  "rules": {
    "block-scoped-var": "deny",
    "constructor-super": "deny",
    "eqeqeq": "deny",
    "for-direction": "deny",
    "import/default": "deny",
    "import/namespace": "deny",
    "import/no-absolute-path": "deny",
    "import/no-cycle": "deny",
    "import/no-default-export": "warn",
    "import/no-duplicates": "deny",
    "import/no-empty-named-blocks": "deny",
    "import/no-mutable-exports": "deny",
    "import/no-named-as-default": "deny",
    "import/no-named-as-default-member": "deny",
    "import/no-self-import": "deny",
    "import/no-unassigned-import": "deny",
    "no-async-promise-executor": "deny",
    "no-await-in-loop": "warn",
    "no-caller": "deny",
    "no-class-assign": "deny",
    "no-compare-neg-zero": "deny",
    "no-cond-assign": "deny",
    "no-console": "allow",
    "no-const-assign": "deny",
    "no-constant-binary-expression": "deny",
    "no-constant-condition": "deny",
    "no-control-regex": "deny",
    "no-debugger": "deny",
    "no-delete-var": "deny",
    "no-dupe-class-members": "deny",
    "no-dupe-else-if": "deny",
    "no-dupe-keys": "deny",
    "no-duplicate-case": "deny",
    "no-empty-character-class": "deny",
    "no-empty-pattern": "deny",
    "no-empty-static-block": "deny",
    "no-eval": "deny",
    "no-ex-assign": "deny",
    "no-extend-native": "deny",
    "no-extra-bind": "deny",
    "no-extra-boolean-cast": "deny",
    "no-func-assign": "deny",
    "no-global-assign": "deny",
    "no-import-assign": "deny",
    "no-invalid-regexp": "deny",
    "no-irregular-whitespace": "deny",
    "no-iterator": "deny",
    "no-loss-of-precision": "deny",
    "no-misleading-character-class": "deny",
    "no-new": "deny",
    "no-new-native-nonconstructor": "deny",
    "no-nonoctal-decimal-escape": "deny",
    "no-obj-calls": "deny",
    "no-param-reassign": "deny",
    "no-self-assign": "deny",
    "no-setter-return": "deny",
    "no-shadow": "deny",
    "no-shadow-restricted-names": "deny",
    "no-sparse-arrays": "deny",
    "no-this-before-super": "deny",
    "no-throw-literal": "deny",
    "no-unassigned-vars": "deny",
    "no-unexpected-multiline": "deny",
    "no-unmodified-loop-condition": "deny",
    "no-unneeded-ternary": "deny",
    "no-unsafe-finally": "deny",
    "no-unsafe-negation": "deny",
    "no-unsafe-optional-chaining": "deny",
    "no-unused-expressions": "deny",
    "no-unused-labels": "deny",
    "no-unused-private-class-members": "deny",
    "no-unused-vars": "deny",
    "no-useless-backreference": "deny",
    "no-useless-call": "warn",
    "no-useless-catch": "deny",
    "no-useless-concat": "deny",
    "no-useless-constructor": "deny",
    "no-useless-escape": "deny",
    "no-useless-rename": "deny",
    "no-var": "deny",
    "no-with": "deny",
    "node/handle-callback-err": "deny",
    "node/no-exports-assign": "deny",
    "node/no-new-require": "deny",
    "node/no-path-concat": "deny",
    "node/no-process-env": "warn",
    "oxc/approx-constant": "deny",
    "oxc/bad-array-method-on-arguments": "deny",
    "oxc/bad-char-at-comparison": "deny",
    "oxc/bad-comparison-sequence": "deny",
    "oxc/bad-min-max-func": "deny",
    "oxc/bad-object-literal-comparison": "deny",
    "oxc/bad-replace-all-arg": "deny",
    "oxc/const-comparisons": "deny",
    "oxc/double-comparisons": "deny",
    "oxc/erasing-op": "deny",
    "oxc/misrefactored-assign-op": "deny",
    "oxc/missing-throw": "deny",
    "oxc/no-accumulating-spread": "warn",
    "oxc/no-async-endpoint-handlers": "deny",
    "oxc/no-map-spread": "warn",
    "oxc/no-this-in-exported-function": "deny",
    "oxc/number-arg-out-of-range": "deny",
    "oxc/only-used-in-recursion": "deny",
    "oxc/uninvoked-array-callback": "deny",
    "prefer-const": "deny",
    "prefer-template": "deny",
    "preserve-caught-error": "deny",
    "promise/always-return": "deny",
    "promise/no-callback-in-promise": "deny",
    "promise/no-multiple-resolved": "deny",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "deny",
    "promise/no-promise-in-callback": "deny",
    "promise/no-return-in-finally": "deny",
    "promise/no-return-wrap": "deny",
    "promise/param-names": "deny",
    "promise/valid-params": "deny",
    "require-yield": "deny",
    "typescript/array-type": "deny",
    "typescript/await-thenable": "deny",
    "typescript/ban-ts-comment": "deny",
    "typescript/consistent-type-exports": "deny",
    "typescript/consistent-type-imports": "deny",
    "typescript/no-array-delete": "deny",
    "typescript/no-base-to-string": "deny",
    "typescript/no-confusing-non-null-assertion": "deny",
    "typescript/no-deprecated": "warn",
    "typescript/no-duplicate-enum-values": "deny",
    "typescript/no-duplicate-type-constituents": "deny",
    "typescript/no-empty-object-type": "deny",
    "typescript/no-explicit-any": "deny",
    "typescript/no-extra-non-null-assertion": "deny",
    "typescript/no-extraneous-class": "deny",
    "typescript/no-floating-promises": "deny",
    "typescript/no-for-in-array": "deny",
    "typescript/no-implied-eval": "deny",
    "typescript/no-import-type-side-effects": "deny",
    "typescript/no-meaningless-void-operator": "deny",
    "typescript/no-misused-new": "deny",
    "typescript/no-misused-promises": "deny",
    "typescript/no-misused-spread": "deny",
    "typescript/no-non-null-asserted-optional-chain": "deny",
    "typescript/no-non-null-assertion": "deny",
    "typescript/no-redundant-type-constituents": "deny",
    "typescript/no-require-imports": "deny",
    "typescript/no-this-alias": "deny",
    "typescript/no-unnecessary-boolean-literal-compare": "deny",
    "typescript/no-unnecessary-parameter-property-assignment": "deny",
    "typescript/no-unnecessary-template-expression": "deny",
    "typescript/no-unnecessary-type-arguments": "deny",
    "typescript/no-unnecessary-type-assertion": "deny",
    "typescript/no-unnecessary-type-constraint": "deny",
    "typescript/no-unsafe-declaration-merging": "deny",
    "typescript/no-unsafe-enum-comparison": "deny",
    "typescript/no-unsafe-function-type": "deny",
    "typescript/no-unsafe-type-assertion": "deny",
    "typescript/no-unsafe-unary-minus": "deny",
    "typescript/no-useless-empty-export": "deny",
    "typescript/no-wrapper-object-types": "deny",
    "typescript/prefer-as-const": "deny",
    "typescript/prefer-literal-enum-member": "deny",
    "typescript/prefer-namespace-keyword": "deny",
    "typescript/require-array-sort-compare": "deny",
    "typescript/restrict-template-expressions": "deny",
    "typescript/return-await": "deny",
    "typescript/triple-slash-reference": "deny",
    "typescript/unbound-method": "deny",
    "unicorn/consistent-function-scoping": "deny",
    "unicorn/no-accessor-recursion": "deny",
    "unicorn/no-array-for-each": "deny",
    "unicorn/no-array-reverse": "deny",
    "unicorn/no-array-sort": "deny",
    "unicorn/no-await-in-promise-methods": "deny",
    "unicorn/no-empty-file": "deny",
    "unicorn/no-instanceof-array": "deny",
    "unicorn/no-instanceof-builtins": "deny",
    "unicorn/no-invalid-fetch-options": "deny",
    "unicorn/no-invalid-remove-event-listener": "deny",
    "unicorn/no-new-array": "deny",
    "unicorn/no-process-exit": "allow",
    "unicorn/no-single-promise-in-promise-methods": "deny",
    "unicorn/no-thenable": "deny",
    "unicorn/no-unnecessary-await": "deny",
    "unicorn/no-useless-fallback-in-spread": "deny",
    "unicorn/no-useless-length-check": "deny",
    "unicorn/no-useless-spread": "deny",
    "unicorn/no-useless-undefined": "allow",
    "unicorn/prefer-add-event-listener": "deny",
    "unicorn/prefer-array-find": "deny",
    "unicorn/prefer-array-flat": "deny",
    "unicorn/prefer-array-flat-map": "deny",
    "unicorn/prefer-array-some": "deny",
    "unicorn/prefer-includes": "deny",
    "unicorn/prefer-modern-dom-apis": "deny",
    "unicorn/prefer-node-protocol": "deny",
    "unicorn/prefer-set-has": "warn",
    "unicorn/prefer-set-size": "deny",
    "unicorn/prefer-string-starts-ends-with": "deny",
    "unicorn/require-module-specifiers": "deny",
    "unicorn/require-post-message-target-origin": "deny",
    "unicorn/throw-new-error": "deny",
    "use-isnan": "deny",
    "valid-typeof": "deny",
  },
  "settings": {
    "jsdoc": {
      "augmentsExtendsReplacesDocs": false,
      "exemptDestructuredRootsFromChecks": false,
      "ignoreInternal": false,
      "ignorePrivate": false,
      "ignoreReplacesDocs": true,
      "implementsReplacesDocs": false,
      "overrideReplacesDocs": true,
      "tagNamePreference": {},
    },
    "jsx-a11y": {
      "attributes": {},
      "components": {},
      "polymorphicPropName": null,
    },
    "next": {
      "rootDir": [],
    },
    "react": {
      "componentWrapperFunctions": [],
      "formComponents": [],
      "linkComponents": [],
      "version": null,
    },
    "vitest": {
      "typecheck": false,
    },
  },
}
`;

exports[`print-config snapshots > base 1`] = `
{
  "categories": {},
  "env": {
    "builtin": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "plugins": [
    "unicorn",
    "typescript",
    "oxc",
  ],
  "rules": {
    "block-scoped-var": "deny",
    "constructor-super": "deny",
    "eqeqeq": "deny",
    "for-direction": "deny",
    "import/default": "deny",
    "import/namespace": "deny",
    "import/no-absolute-path": "deny",
    "import/no-cycle": "deny",
    "import/no-default-export": "warn",
    "import/no-duplicates": "deny",
    "import/no-empty-named-blocks": "deny",
    "import/no-mutable-exports": "deny",
    "import/no-named-as-default": "deny",
    "import/no-named-as-default-member": "deny",
    "import/no-self-import": "deny",
    "import/no-unassigned-import": "deny",
    "no-async-promise-executor": "deny",
    "no-await-in-loop": "warn",
    "no-caller": "deny",
    "no-class-assign": "deny",
    "no-compare-neg-zero": "deny",
    "no-cond-assign": "deny",
    "no-console": "warn",
    "no-const-assign": "deny",
    "no-constant-binary-expression": "deny",
    "no-constant-condition": "deny",
    "no-control-regex": "deny",
    "no-debugger": "deny",
    "no-delete-var": "deny",
    "no-dupe-class-members": "deny",
    "no-dupe-else-if": "deny",
    "no-dupe-keys": "deny",
    "no-duplicate-case": "deny",
    "no-empty-character-class": "deny",
    "no-empty-pattern": "deny",
    "no-empty-static-block": "deny",
    "no-eval": "deny",
    "no-ex-assign": "deny",
    "no-extend-native": "deny",
    "no-extra-bind": "deny",
    "no-extra-boolean-cast": "deny",
    "no-func-assign": "deny",
    "no-global-assign": "deny",
    "no-import-assign": "deny",
    "no-invalid-regexp": "deny",
    "no-irregular-whitespace": "deny",
    "no-iterator": "deny",
    "no-loss-of-precision": "deny",
    "no-misleading-character-class": "deny",
    "no-new": "deny",
    "no-new-native-nonconstructor": "deny",
    "no-nonoctal-decimal-escape": "deny",
    "no-obj-calls": "deny",
    "no-param-reassign": "deny",
    "no-self-assign": "deny",
    "no-setter-return": "deny",
    "no-shadow": "deny",
    "no-shadow-restricted-names": "deny",
    "no-sparse-arrays": "deny",
    "no-this-before-super": "deny",
    "no-throw-literal": "deny",
    "no-unassigned-vars": "deny",
    "no-unexpected-multiline": "deny",
    "no-unmodified-loop-condition": "deny",
    "no-unneeded-ternary": "deny",
    "no-unsafe-finally": "deny",
    "no-unsafe-negation": "deny",
    "no-unsafe-optional-chaining": "deny",
    "no-unused-expressions": "deny",
    "no-unused-labels": "deny",
    "no-unused-private-class-members": "deny",
    "no-unused-vars": "deny",
    "no-useless-backreference": "deny",
    "no-useless-call": "warn",
    "no-useless-catch": "deny",
    "no-useless-concat": "deny",
    "no-useless-constructor": "deny",
    "no-useless-escape": "deny",
    "no-useless-rename": "deny",
    "no-var": "deny",
    "no-with": "deny",
    "oxc/approx-constant": "deny",
    "oxc/bad-array-method-on-arguments": "deny",
    "oxc/bad-char-at-comparison": "deny",
    "oxc/bad-comparison-sequence": "deny",
    "oxc/bad-min-max-func": "deny",
    "oxc/bad-object-literal-comparison": "deny",
    "oxc/bad-replace-all-arg": "deny",
    "oxc/const-comparisons": "deny",
    "oxc/double-comparisons": "deny",
    "oxc/erasing-op": "deny",
    "oxc/misrefactored-assign-op": "deny",
    "oxc/missing-throw": "deny",
    "oxc/no-accumulating-spread": "warn",
    "oxc/no-async-endpoint-handlers": "deny",
    "oxc/no-map-spread": "warn",
    "oxc/no-this-in-exported-function": "deny",
    "oxc/number-arg-out-of-range": "deny",
    "oxc/only-used-in-recursion": "deny",
    "oxc/uninvoked-array-callback": "deny",
    "prefer-const": "deny",
    "prefer-template": "deny",
    "preserve-caught-error": "deny",
    "promise/always-return": "deny",
    "promise/no-callback-in-promise": "warn",
    "promise/no-multiple-resolved": "deny",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "deny",
    "promise/no-promise-in-callback": "warn",
    "promise/no-return-wrap": "deny",
    "promise/param-names": "deny",
    "promise/valid-params": "deny",
    "require-yield": "deny",
    "typescript/await-thenable": "deny",
    "typescript/no-array-delete": "deny",
    "typescript/no-base-to-string": "deny",
    "typescript/no-confusing-non-null-assertion": "deny",
    "typescript/no-duplicate-enum-values": "deny",
    "typescript/no-duplicate-type-constituents": "deny",
    "typescript/no-extra-non-null-assertion": "deny",
    "typescript/no-extraneous-class": "deny",
    "typescript/no-floating-promises": "deny",
    "typescript/no-for-in-array": "deny",
    "typescript/no-implied-eval": "deny",
    "typescript/no-meaningless-void-operator": "deny",
    "typescript/no-misused-new": "deny",
    "typescript/no-misused-spread": "deny",
    "typescript/no-non-null-asserted-optional-chain": "deny",
    "typescript/no-redundant-type-constituents": "deny",
    "typescript/no-this-alias": "deny",
    "typescript/no-unnecessary-boolean-literal-compare": "deny",
    "typescript/no-unnecessary-parameter-property-assignment": "deny",
    "typescript/no-unnecessary-template-expression": "deny",
    "typescript/no-unnecessary-type-arguments": "deny",
    "typescript/no-unnecessary-type-assertion": "deny",
    "typescript/no-unnecessary-type-constraint": "deny",
    "typescript/no-unsafe-declaration-merging": "deny",
    "typescript/no-unsafe-enum-comparison": "deny",
    "typescript/no-unsafe-type-assertion": "deny",
    "typescript/no-unsafe-unary-minus": "deny",
    "typescript/no-useless-empty-export": "deny",
    "typescript/no-wrapper-object-types": "deny",
    "typescript/prefer-as-const": "deny",
    "typescript/prefer-namespace-keyword": "deny",
    "typescript/require-array-sort-compare": "deny",
    "typescript/restrict-template-expressions": "deny",
    "typescript/triple-slash-reference": "deny",
    "typescript/unbound-method": "deny",
    "unicorn/consistent-function-scoping": "deny",
    "unicorn/no-accessor-recursion": "deny",
    "unicorn/no-array-for-each": "deny",
    "unicorn/no-array-reverse": "deny",
    "unicorn/no-array-sort": "deny",
    "unicorn/no-await-in-promise-methods": "deny",
    "unicorn/no-empty-file": "deny",
    "unicorn/no-instanceof-array": "deny",
    "unicorn/no-instanceof-builtins": "deny",
    "unicorn/no-invalid-fetch-options": "deny",
    "unicorn/no-invalid-remove-event-listener": "deny",
    "unicorn/no-new-array": "deny",
    "unicorn/no-single-promise-in-promise-methods": "deny",
    "unicorn/no-thenable": "deny",
    "unicorn/no-unnecessary-await": "deny",
    "unicorn/no-useless-fallback-in-spread": "deny",
    "unicorn/no-useless-length-check": "deny",
    "unicorn/no-useless-spread": "deny",
    "unicorn/no-useless-undefined": "allow",
    "unicorn/prefer-add-event-listener": "deny",
    "unicorn/prefer-array-find": "deny",
    "unicorn/prefer-array-flat": "deny",
    "unicorn/prefer-array-flat-map": "deny",
    "unicorn/prefer-array-some": "deny",
    "unicorn/prefer-includes": "deny",
    "unicorn/prefer-modern-dom-apis": "deny",
    "unicorn/prefer-node-protocol": "deny",
    "unicorn/prefer-set-has": "warn",
    "unicorn/prefer-set-size": "deny",
    "unicorn/prefer-string-starts-ends-with": "deny",
    "unicorn/require-module-specifiers": "deny",
    "unicorn/require-post-message-target-origin": "deny",
    "unicorn/throw-new-error": "deny",
    "use-isnan": "deny",
    "valid-typeof": "deny",
  },
  "settings": {
    "jsdoc": {
      "augmentsExtendsReplacesDocs": false,
      "exemptDestructuredRootsFromChecks": false,
      "ignoreInternal": false,
      "ignorePrivate": false,
      "ignoreReplacesDocs": true,
      "implementsReplacesDocs": false,
      "overrideReplacesDocs": true,
      "tagNamePreference": {},
    },
    "jsx-a11y": {
      "attributes": {},
      "components": {},
      "polymorphicPropName": null,
    },
    "next": {
      "rootDir": [],
    },
    "react": {
      "componentWrapperFunctions": [],
      "formComponents": [],
      "linkComponents": [],
      "version": null,
    },
    "vitest": {
      "typecheck": false,
    },
  },
}
`;

exports[`print-config snapshots > nextjs 1`] = `
{
  "categories": {},
  "env": {
    "builtin": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "plugins": [
    "unicorn",
    "typescript",
    "oxc",
  ],
  "rules": {
    "block-scoped-var": "deny",
    "constructor-super": "deny",
    "eqeqeq": "deny",
    "for-direction": "deny",
    "import/default": "deny",
    "import/namespace": "deny",
    "import/no-absolute-path": "deny",
    "import/no-cycle": "deny",
    "import/no-default-export": "warn",
    "import/no-duplicates": "deny",
    "import/no-empty-named-blocks": "deny",
    "import/no-mutable-exports": "deny",
    "import/no-named-as-default": "deny",
    "import/no-named-as-default-member": "deny",
    "import/no-self-import": "deny",
    "import/no-unassigned-import": "deny",
    "jsx_a11y/alt-text": "deny",
    "jsx_a11y/anchor-has-content": "deny",
    "jsx_a11y/anchor-is-valid": "deny",
    "jsx_a11y/aria-activedescendant-has-tabindex": "deny",
    "jsx_a11y/aria-props": "deny",
    "jsx_a11y/aria-proptypes": "deny",
    "jsx_a11y/aria-role": "deny",
    "jsx_a11y/aria-unsupported-elements": "deny",
    "jsx_a11y/autocomplete-valid": "deny",
    "jsx_a11y/click-events-have-key-events": "warn",
    "jsx_a11y/heading-has-content": "deny",
    "jsx_a11y/html-has-lang": "deny",
    "jsx_a11y/iframe-has-title": "deny",
    "jsx_a11y/img-redundant-alt": "deny",
    "jsx_a11y/label-has-associated-control": "deny",
    "jsx_a11y/lang": "deny",
    "jsx_a11y/media-has-caption": "warn",
    "jsx_a11y/mouse-events-have-key-events": "warn",
    "jsx_a11y/no-access-key": "deny",
    "jsx_a11y/no-aria-hidden-on-focusable": "deny",
    "jsx_a11y/no-autofocus": "warn",
    "jsx_a11y/no-distracting-elements": "deny",
    "jsx_a11y/no-noninteractive-tabindex": "warn",
    "jsx_a11y/no-redundant-roles": "deny",
    "jsx_a11y/no-static-element-interactions": "warn",
    "jsx_a11y/prefer-tag-over-role": "deny",
    "jsx_a11y/role-has-required-aria-props": "deny",
    "jsx_a11y/role-supports-aria-props": "deny",
    "jsx_a11y/scope": "deny",
    "jsx_a11y/tabindex-no-positive": "deny",
    "nextjs/google-font-display": "warn",
    "nextjs/google-font-preconnect": "warn",
    "nextjs/inline-script-id": "deny",
    "nextjs/next-script-for-ga": "deny",
    "nextjs/no-assign-module-variable": "deny",
    "nextjs/no-async-client-component": "deny",
    "nextjs/no-before-interactive-script-outside-document": "warn",
    "nextjs/no-css-tags": "warn",
    "nextjs/no-document-import-in-page": "deny",
    "nextjs/no-duplicate-head": "deny",
    "nextjs/no-head-element": "deny",
    "nextjs/no-head-import-in-document": "deny",
    "nextjs/no-html-link-for-pages": "deny",
    "nextjs/no-img-element": "warn",
    "nextjs/no-page-custom-font": "warn",
    "nextjs/no-script-component-in-head": "deny",
    "nextjs/no-styled-jsx-in-document": "warn",
    "nextjs/no-sync-scripts": "deny",
    "nextjs/no-title-in-document-head": "deny",
    "nextjs/no-typos": "deny",
    "nextjs/no-unwanted-polyfillio": "deny",
    "no-async-promise-executor": "deny",
    "no-await-in-loop": "warn",
    "no-caller": "deny",
    "no-class-assign": "deny",
    "no-compare-neg-zero": "deny",
    "no-cond-assign": "deny",
    "no-console": "warn",
    "no-const-assign": "deny",
    "no-constant-binary-expression": "deny",
    "no-constant-condition": "deny",
    "no-control-regex": "deny",
    "no-debugger": "deny",
    "no-delete-var": "deny",
    "no-dupe-class-members": "deny",
    "no-dupe-else-if": "deny",
    "no-dupe-keys": "deny",
    "no-duplicate-case": "deny",
    "no-empty-character-class": "deny",
    "no-empty-pattern": "deny",
    "no-empty-static-block": "deny",
    "no-eval": "deny",
    "no-ex-assign": "deny",
    "no-extend-native": "deny",
    "no-extra-bind": "deny",
    "no-extra-boolean-cast": "deny",
    "no-func-assign": "deny",
    "no-global-assign": "deny",
    "no-import-assign": "deny",
    "no-invalid-regexp": "deny",
    "no-irregular-whitespace": "deny",
    "no-iterator": "deny",
    "no-loss-of-precision": "deny",
    "no-misleading-character-class": "deny",
    "no-new": "deny",
    "no-new-native-nonconstructor": "deny",
    "no-nonoctal-decimal-escape": "deny",
    "no-obj-calls": "deny",
    "no-param-reassign": "deny",
    "no-self-assign": "deny",
    "no-setter-return": "deny",
    "no-shadow": "deny",
    "no-shadow-restricted-names": "deny",
    "no-sparse-arrays": "deny",
    "no-this-before-super": "deny",
    "no-throw-literal": "deny",
    "no-unassigned-vars": "deny",
    "no-unexpected-multiline": "deny",
    "no-unmodified-loop-condition": "deny",
    "no-unneeded-ternary": "deny",
    "no-unsafe-finally": "deny",
    "no-unsafe-negation": "deny",
    "no-unsafe-optional-chaining": "deny",
    "no-unused-expressions": "deny",
    "no-unused-labels": "deny",
    "no-unused-private-class-members": "deny",
    "no-unused-vars": "deny",
    "no-useless-backreference": "deny",
    "no-useless-call": "warn",
    "no-useless-catch": "deny",
    "no-useless-concat": "deny",
    "no-useless-constructor": "deny",
    "no-useless-escape": "deny",
    "no-useless-rename": "deny",
    "no-var": "deny",
    "no-with": "deny",
    "oxc/approx-constant": "deny",
    "oxc/bad-array-method-on-arguments": "deny",
    "oxc/bad-char-at-comparison": "deny",
    "oxc/bad-comparison-sequence": "deny",
    "oxc/bad-min-max-func": "deny",
    "oxc/bad-object-literal-comparison": "deny",
    "oxc/bad-replace-all-arg": "deny",
    "oxc/const-comparisons": "deny",
    "oxc/double-comparisons": "deny",
    "oxc/erasing-op": "deny",
    "oxc/misrefactored-assign-op": "deny",
    "oxc/missing-throw": "deny",
    "oxc/no-accumulating-spread": "warn",
    "oxc/no-async-endpoint-handlers": "deny",
    "oxc/no-map-spread": "warn",
    "oxc/no-this-in-exported-function": "deny",
    "oxc/number-arg-out-of-range": "deny",
    "oxc/only-used-in-recursion": "deny",
    "oxc/uninvoked-array-callback": "deny",
    "prefer-const": "deny",
    "prefer-template": "deny",
    "preserve-caught-error": "deny",
    "promise/always-return": "deny",
    "promise/no-callback-in-promise": "warn",
    "promise/no-multiple-resolved": "deny",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "deny",
    "promise/no-promise-in-callback": "warn",
    "promise/no-return-wrap": "deny",
    "promise/param-names": "deny",
    "promise/valid-params": "deny",
    "react/exhaustive-deps": "deny",
    "react/forward-ref-uses-ref": "deny",
    "react/iframe-missing-sandbox": "deny",
    "react/jsx-key": "deny",
    "react/jsx-no-comment-textnodes": "deny",
    "react/jsx-no-constructed-context-values": "warn",
    "react/jsx-no-duplicate-props": "deny",
    "react/jsx-no-script-url": "deny",
    "react/jsx-no-target-blank": "deny",
    "react/jsx-no-undef": "deny",
    "react/jsx-props-no-spread-multi": "deny",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "deny",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "deny",
    "react/no-did-mount-set-state": "deny",
    "react/no-direct-mutation-state": "deny",
    "react/no-find-dom-node": "deny",
    "react/no-is-mounted": "deny",
    "react/no-namespace": "deny",
    "react/no-render-return-value": "deny",
    "react/no-string-refs": "deny",
    "react/no-this-in-sfc": "deny",
    "react/no-unescaped-entities": "deny",
    "react/no-unknown-property": "deny",
    "react/no-unsafe": "deny",
    "react/no-will-update-set-state": "deny",
    "react/react-in-jsx-scope": "deny",
    "react/require-render-return": "deny",
    "react/rules-of-hooks": "deny",
    "react/self-closing-comp": "deny",
    "react/style-prop-object": "deny",
    "react/void-dom-elements-no-children": "deny",
    "react_perf/jsx-no-jsx-as-prop": "warn",
    "react_perf/jsx-no-new-array-as-prop": "warn",
    "react_perf/jsx-no-new-function-as-prop": "warn",
    "react_perf/jsx-no-new-object-as-prop": "warn",
    "require-yield": "deny",
    "typescript/array-type": "deny",
    "typescript/await-thenable": "deny",
    "typescript/ban-ts-comment": "deny",
    "typescript/consistent-type-exports": "deny",
    "typescript/consistent-type-imports": "deny",
    "typescript/no-array-delete": "deny",
    "typescript/no-base-to-string": "deny",
    "typescript/no-confusing-non-null-assertion": "deny",
    "typescript/no-deprecated": "warn",
    "typescript/no-duplicate-enum-values": "deny",
    "typescript/no-duplicate-type-constituents": "deny",
    "typescript/no-empty-object-type": "deny",
    "typescript/no-explicit-any": "deny",
    "typescript/no-extra-non-null-assertion": "deny",
    "typescript/no-extraneous-class": "deny",
    "typescript/no-floating-promises": "deny",
    "typescript/no-for-in-array": "deny",
    "typescript/no-implied-eval": "deny",
    "typescript/no-import-type-side-effects": "deny",
    "typescript/no-meaningless-void-operator": "deny",
    "typescript/no-misused-new": "deny",
    "typescript/no-misused-promises": "deny",
    "typescript/no-misused-spread": "deny",
    "typescript/no-non-null-asserted-optional-chain": "deny",
    "typescript/no-non-null-assertion": "deny",
    "typescript/no-redundant-type-constituents": "deny",
    "typescript/no-require-imports": "deny",
    "typescript/no-this-alias": "deny",
    "typescript/no-unnecessary-boolean-literal-compare": "deny",
    "typescript/no-unnecessary-parameter-property-assignment": "deny",
    "typescript/no-unnecessary-template-expression": "deny",
    "typescript/no-unnecessary-type-arguments": "deny",
    "typescript/no-unnecessary-type-assertion": "deny",
    "typescript/no-unnecessary-type-constraint": "deny",
    "typescript/no-unsafe-declaration-merging": "deny",
    "typescript/no-unsafe-enum-comparison": "deny",
    "typescript/no-unsafe-function-type": "deny",
    "typescript/no-unsafe-type-assertion": "deny",
    "typescript/no-unsafe-unary-minus": "deny",
    "typescript/no-useless-empty-export": "deny",
    "typescript/no-wrapper-object-types": "deny",
    "typescript/prefer-as-const": "deny",
    "typescript/prefer-literal-enum-member": "deny",
    "typescript/prefer-namespace-keyword": "deny",
    "typescript/require-array-sort-compare": "deny",
    "typescript/restrict-template-expressions": "deny",
    "typescript/return-await": "deny",
    "typescript/triple-slash-reference": "deny",
    "typescript/unbound-method": "deny",
    "unicorn/consistent-function-scoping": "deny",
    "unicorn/no-accessor-recursion": "deny",
    "unicorn/no-array-for-each": "deny",
    "unicorn/no-array-reverse": "deny",
    "unicorn/no-array-sort": "deny",
    "unicorn/no-await-in-promise-methods": "deny",
    "unicorn/no-empty-file": "deny",
    "unicorn/no-instanceof-array": "deny",
    "unicorn/no-instanceof-builtins": "deny",
    "unicorn/no-invalid-fetch-options": "deny",
    "unicorn/no-invalid-remove-event-listener": "deny",
    "unicorn/no-new-array": "deny",
    "unicorn/no-single-promise-in-promise-methods": "deny",
    "unicorn/no-thenable": "deny",
    "unicorn/no-unnecessary-await": "deny",
    "unicorn/no-useless-fallback-in-spread": "deny",
    "unicorn/no-useless-length-check": "deny",
    "unicorn/no-useless-spread": "deny",
    "unicorn/no-useless-undefined": "allow",
    "unicorn/prefer-add-event-listener": "deny",
    "unicorn/prefer-array-find": "deny",
    "unicorn/prefer-array-flat": "deny",
    "unicorn/prefer-array-flat-map": "deny",
    "unicorn/prefer-array-some": "deny",
    "unicorn/prefer-includes": "deny",
    "unicorn/prefer-modern-dom-apis": "deny",
    "unicorn/prefer-node-protocol": "deny",
    "unicorn/prefer-set-has": "warn",
    "unicorn/prefer-set-size": "deny",
    "unicorn/prefer-string-starts-ends-with": "deny",
    "unicorn/require-module-specifiers": "deny",
    "unicorn/require-post-message-target-origin": "deny",
    "unicorn/throw-new-error": "deny",
    "use-isnan": "deny",
    "valid-typeof": "deny",
  },
  "settings": {
    "jsdoc": {
      "augmentsExtendsReplacesDocs": false,
      "exemptDestructuredRootsFromChecks": false,
      "ignoreInternal": false,
      "ignorePrivate": false,
      "ignoreReplacesDocs": true,
      "implementsReplacesDocs": false,
      "overrideReplacesDocs": true,
      "tagNamePreference": {},
    },
    "jsx-a11y": {
      "attributes": {},
      "components": {},
      "polymorphicPropName": null,
    },
    "next": {
      "rootDir": [],
    },
    "react": {
      "componentWrapperFunctions": [],
      "formComponents": [],
      "linkComponents": [],
      "version": null,
    },
    "vitest": {
      "typecheck": false,
    },
  },
}
`;

exports[`print-config snapshots > react 1`] = `
{
  "categories": {},
  "env": {
    "builtin": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "plugins": [
    "unicorn",
    "typescript",
    "oxc",
  ],
  "rules": {
    "block-scoped-var": "deny",
    "constructor-super": "deny",
    "eqeqeq": "deny",
    "for-direction": "deny",
    "import/default": "deny",
    "import/namespace": "deny",
    "import/no-absolute-path": "deny",
    "import/no-cycle": "deny",
    "import/no-default-export": "warn",
    "import/no-duplicates": "deny",
    "import/no-empty-named-blocks": "deny",
    "import/no-mutable-exports": "deny",
    "import/no-named-as-default": "deny",
    "import/no-named-as-default-member": "deny",
    "import/no-self-import": "deny",
    "import/no-unassigned-import": "deny",
    "jsx_a11y/alt-text": "deny",
    "jsx_a11y/anchor-has-content": "deny",
    "jsx_a11y/anchor-is-valid": "deny",
    "jsx_a11y/aria-activedescendant-has-tabindex": "deny",
    "jsx_a11y/aria-props": "deny",
    "jsx_a11y/aria-proptypes": "deny",
    "jsx_a11y/aria-role": "deny",
    "jsx_a11y/aria-unsupported-elements": "deny",
    "jsx_a11y/autocomplete-valid": "deny",
    "jsx_a11y/click-events-have-key-events": "warn",
    "jsx_a11y/heading-has-content": "deny",
    "jsx_a11y/html-has-lang": "deny",
    "jsx_a11y/iframe-has-title": "deny",
    "jsx_a11y/img-redundant-alt": "deny",
    "jsx_a11y/label-has-associated-control": "deny",
    "jsx_a11y/lang": "deny",
    "jsx_a11y/media-has-caption": "warn",
    "jsx_a11y/mouse-events-have-key-events": "warn",
    "jsx_a11y/no-access-key": "deny",
    "jsx_a11y/no-aria-hidden-on-focusable": "deny",
    "jsx_a11y/no-autofocus": "warn",
    "jsx_a11y/no-distracting-elements": "deny",
    "jsx_a11y/no-noninteractive-tabindex": "warn",
    "jsx_a11y/no-redundant-roles": "deny",
    "jsx_a11y/no-static-element-interactions": "warn",
    "jsx_a11y/prefer-tag-over-role": "deny",
    "jsx_a11y/role-has-required-aria-props": "deny",
    "jsx_a11y/role-supports-aria-props": "deny",
    "jsx_a11y/scope": "deny",
    "jsx_a11y/tabindex-no-positive": "deny",
    "no-async-promise-executor": "deny",
    "no-await-in-loop": "warn",
    "no-caller": "deny",
    "no-class-assign": "deny",
    "no-compare-neg-zero": "deny",
    "no-cond-assign": "deny",
    "no-console": "warn",
    "no-const-assign": "deny",
    "no-constant-binary-expression": "deny",
    "no-constant-condition": "deny",
    "no-control-regex": "deny",
    "no-debugger": "deny",
    "no-delete-var": "deny",
    "no-dupe-class-members": "deny",
    "no-dupe-else-if": "deny",
    "no-dupe-keys": "deny",
    "no-duplicate-case": "deny",
    "no-empty-character-class": "deny",
    "no-empty-pattern": "deny",
    "no-empty-static-block": "deny",
    "no-eval": "deny",
    "no-ex-assign": "deny",
    "no-extend-native": "deny",
    "no-extra-bind": "deny",
    "no-extra-boolean-cast": "deny",
    "no-func-assign": "deny",
    "no-global-assign": "deny",
    "no-import-assign": "deny",
    "no-invalid-regexp": "deny",
    "no-irregular-whitespace": "deny",
    "no-iterator": "deny",
    "no-loss-of-precision": "deny",
    "no-misleading-character-class": "deny",
    "no-new": "deny",
    "no-new-native-nonconstructor": "deny",
    "no-nonoctal-decimal-escape": "deny",
    "no-obj-calls": "deny",
    "no-param-reassign": "deny",
    "no-self-assign": "deny",
    "no-setter-return": "deny",
    "no-shadow": "deny",
    "no-shadow-restricted-names": "deny",
    "no-sparse-arrays": "deny",
    "no-this-before-super": "deny",
    "no-throw-literal": "deny",
    "no-unassigned-vars": "deny",
    "no-unexpected-multiline": "deny",
    "no-unmodified-loop-condition": "deny",
    "no-unneeded-ternary": "deny",
    "no-unsafe-finally": "deny",
    "no-unsafe-negation": "deny",
    "no-unsafe-optional-chaining": "deny",
    "no-unused-expressions": "deny",
    "no-unused-labels": "deny",
    "no-unused-private-class-members": "deny",
    "no-unused-vars": "deny",
    "no-useless-backreference": "deny",
    "no-useless-call": "warn",
    "no-useless-catch": "deny",
    "no-useless-concat": "deny",
    "no-useless-constructor": "deny",
    "no-useless-escape": "deny",
    "no-useless-rename": "deny",
    "no-var": "deny",
    "no-with": "deny",
    "oxc/approx-constant": "deny",
    "oxc/bad-array-method-on-arguments": "deny",
    "oxc/bad-char-at-comparison": "deny",
    "oxc/bad-comparison-sequence": "deny",
    "oxc/bad-min-max-func": "deny",
    "oxc/bad-object-literal-comparison": "deny",
    "oxc/bad-replace-all-arg": "deny",
    "oxc/const-comparisons": "deny",
    "oxc/double-comparisons": "deny",
    "oxc/erasing-op": "deny",
    "oxc/misrefactored-assign-op": "deny",
    "oxc/missing-throw": "deny",
    "oxc/no-accumulating-spread": "warn",
    "oxc/no-async-endpoint-handlers": "deny",
    "oxc/no-map-spread": "warn",
    "oxc/no-this-in-exported-function": "deny",
    "oxc/number-arg-out-of-range": "deny",
    "oxc/only-used-in-recursion": "deny",
    "oxc/uninvoked-array-callback": "deny",
    "prefer-const": "deny",
    "prefer-template": "deny",
    "preserve-caught-error": "deny",
    "promise/always-return": "deny",
    "promise/no-callback-in-promise": "warn",
    "promise/no-multiple-resolved": "deny",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "deny",
    "promise/no-promise-in-callback": "warn",
    "promise/no-return-wrap": "deny",
    "promise/param-names": "deny",
    "promise/valid-params": "deny",
    "react/exhaustive-deps": "deny",
    "react/forward-ref-uses-ref": "deny",
    "react/iframe-missing-sandbox": "deny",
    "react/jsx-key": "deny",
    "react/jsx-no-comment-textnodes": "deny",
    "react/jsx-no-constructed-context-values": "warn",
    "react/jsx-no-duplicate-props": "deny",
    "react/jsx-no-script-url": "deny",
    "react/jsx-no-target-blank": "deny",
    "react/jsx-no-undef": "deny",
    "react/jsx-props-no-spread-multi": "deny",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "deny",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "deny",
    "react/no-did-mount-set-state": "deny",
    "react/no-direct-mutation-state": "deny",
    "react/no-find-dom-node": "deny",
    "react/no-is-mounted": "deny",
    "react/no-namespace": "deny",
    "react/no-render-return-value": "deny",
    "react/no-string-refs": "deny",
    "react/no-this-in-sfc": "deny",
    "react/no-unescaped-entities": "deny",
    "react/no-unknown-property": "deny",
    "react/no-unsafe": "deny",
    "react/no-will-update-set-state": "deny",
    "react/react-in-jsx-scope": "deny",
    "react/require-render-return": "deny",
    "react/rules-of-hooks": "deny",
    "react/self-closing-comp": "deny",
    "react/style-prop-object": "deny",
    "react/void-dom-elements-no-children": "deny",
    "react_perf/jsx-no-jsx-as-prop": "warn",
    "react_perf/jsx-no-new-array-as-prop": "warn",
    "react_perf/jsx-no-new-function-as-prop": "warn",
    "react_perf/jsx-no-new-object-as-prop": "warn",
    "require-yield": "deny",
    "typescript/array-type": "deny",
    "typescript/await-thenable": "deny",
    "typescript/ban-ts-comment": "deny",
    "typescript/consistent-type-exports": "deny",
    "typescript/consistent-type-imports": "deny",
    "typescript/no-array-delete": "deny",
    "typescript/no-base-to-string": "deny",
    "typescript/no-confusing-non-null-assertion": "deny",
    "typescript/no-deprecated": "warn",
    "typescript/no-duplicate-enum-values": "deny",
    "typescript/no-duplicate-type-constituents": "deny",
    "typescript/no-empty-object-type": "deny",
    "typescript/no-explicit-any": "deny",
    "typescript/no-extra-non-null-assertion": "deny",
    "typescript/no-extraneous-class": "deny",
    "typescript/no-floating-promises": "deny",
    "typescript/no-for-in-array": "deny",
    "typescript/no-implied-eval": "deny",
    "typescript/no-import-type-side-effects": "deny",
    "typescript/no-meaningless-void-operator": "deny",
    "typescript/no-misused-new": "deny",
    "typescript/no-misused-promises": "deny",
    "typescript/no-misused-spread": "deny",
    "typescript/no-non-null-asserted-optional-chain": "deny",
    "typescript/no-non-null-assertion": "deny",
    "typescript/no-redundant-type-constituents": "deny",
    "typescript/no-require-imports": "deny",
    "typescript/no-this-alias": "deny",
    "typescript/no-unnecessary-boolean-literal-compare": "deny",
    "typescript/no-unnecessary-parameter-property-assignment": "deny",
    "typescript/no-unnecessary-template-expression": "deny",
    "typescript/no-unnecessary-type-arguments": "deny",
    "typescript/no-unnecessary-type-assertion": "deny",
    "typescript/no-unnecessary-type-constraint": "deny",
    "typescript/no-unsafe-declaration-merging": "deny",
    "typescript/no-unsafe-enum-comparison": "deny",
    "typescript/no-unsafe-function-type": "deny",
    "typescript/no-unsafe-type-assertion": "deny",
    "typescript/no-unsafe-unary-minus": "deny",
    "typescript/no-useless-empty-export": "deny",
    "typescript/no-wrapper-object-types": "deny",
    "typescript/prefer-as-const": "deny",
    "typescript/prefer-literal-enum-member": "deny",
    "typescript/prefer-namespace-keyword": "deny",
    "typescript/require-array-sort-compare": "deny",
    "typescript/restrict-template-expressions": "deny",
    "typescript/return-await": "deny",
    "typescript/triple-slash-reference": "deny",
    "typescript/unbound-method": "deny",
    "unicorn/consistent-function-scoping": "deny",
    "unicorn/no-accessor-recursion": "deny",
    "unicorn/no-array-for-each": "deny",
    "unicorn/no-array-reverse": "deny",
    "unicorn/no-array-sort": "deny",
    "unicorn/no-await-in-promise-methods": "deny",
    "unicorn/no-empty-file": "deny",
    "unicorn/no-instanceof-array": "deny",
    "unicorn/no-instanceof-builtins": "deny",
    "unicorn/no-invalid-fetch-options": "deny",
    "unicorn/no-invalid-remove-event-listener": "deny",
    "unicorn/no-new-array": "deny",
    "unicorn/no-single-promise-in-promise-methods": "deny",
    "unicorn/no-thenable": "deny",
    "unicorn/no-unnecessary-await": "deny",
    "unicorn/no-useless-fallback-in-spread": "deny",
    "unicorn/no-useless-length-check": "deny",
    "unicorn/no-useless-spread": "deny",
    "unicorn/no-useless-undefined": "allow",
    "unicorn/prefer-add-event-listener": "deny",
    "unicorn/prefer-array-find": "deny",
    "unicorn/prefer-array-flat": "deny",
    "unicorn/prefer-array-flat-map": "deny",
    "unicorn/prefer-array-some": "deny",
    "unicorn/prefer-includes": "deny",
    "unicorn/prefer-modern-dom-apis": "deny",
    "unicorn/prefer-node-protocol": "deny",
    "unicorn/prefer-set-has": "warn",
    "unicorn/prefer-set-size": "deny",
    "unicorn/prefer-string-starts-ends-with": "deny",
    "unicorn/require-module-specifiers": "deny",
    "unicorn/require-post-message-target-origin": "deny",
    "unicorn/throw-new-error": "deny",
    "use-isnan": "deny",
    "valid-typeof": "deny",
  },
  "settings": {
    "jsdoc": {
      "augmentsExtendsReplacesDocs": false,
      "exemptDestructuredRootsFromChecks": false,
      "ignoreInternal": false,
      "ignorePrivate": false,
      "ignoreReplacesDocs": true,
      "implementsReplacesDocs": false,
      "overrideReplacesDocs": true,
      "tagNamePreference": {},
    },
    "jsx-a11y": {
      "attributes": {},
      "components": {},
      "polymorphicPropName": null,
    },
    "next": {
      "rootDir": [],
    },
    "react": {
      "componentWrapperFunctions": [],
      "formComponents": [],
      "linkComponents": [],
      "version": null,
    },
    "vitest": {
      "typecheck": false,
    },
  },
}
`;

exports[`print-config snapshots > tailwind 1`] = `
{
  "categories": {},
  "env": {
    "builtin": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "plugins": [
    "unicorn",
    "typescript",
    "oxc",
  ],
  "rules": {
    "block-scoped-var": "deny",
    "constructor-super": "deny",
    "eqeqeq": "deny",
    "for-direction": "deny",
    "import/default": "deny",
    "import/namespace": "deny",
    "import/no-absolute-path": "deny",
    "import/no-cycle": "deny",
    "import/no-default-export": "warn",
    "import/no-duplicates": "deny",
    "import/no-empty-named-blocks": "deny",
    "import/no-mutable-exports": "deny",
    "import/no-named-as-default": "deny",
    "import/no-named-as-default-member": "deny",
    "import/no-self-import": "deny",
    "import/no-unassigned-import": "deny",
    "jsx_a11y/alt-text": "deny",
    "jsx_a11y/anchor-has-content": "deny",
    "jsx_a11y/anchor-is-valid": "deny",
    "jsx_a11y/aria-activedescendant-has-tabindex": "deny",
    "jsx_a11y/aria-props": "deny",
    "jsx_a11y/aria-proptypes": "deny",
    "jsx_a11y/aria-role": "deny",
    "jsx_a11y/aria-unsupported-elements": "deny",
    "jsx_a11y/autocomplete-valid": "deny",
    "jsx_a11y/click-events-have-key-events": "warn",
    "jsx_a11y/heading-has-content": "deny",
    "jsx_a11y/html-has-lang": "deny",
    "jsx_a11y/iframe-has-title": "deny",
    "jsx_a11y/img-redundant-alt": "deny",
    "jsx_a11y/label-has-associated-control": "deny",
    "jsx_a11y/lang": "deny",
    "jsx_a11y/media-has-caption": "warn",
    "jsx_a11y/mouse-events-have-key-events": "warn",
    "jsx_a11y/no-access-key": "deny",
    "jsx_a11y/no-aria-hidden-on-focusable": "deny",
    "jsx_a11y/no-autofocus": "warn",
    "jsx_a11y/no-distracting-elements": "deny",
    "jsx_a11y/no-noninteractive-tabindex": "warn",
    "jsx_a11y/no-redundant-roles": "deny",
    "jsx_a11y/no-static-element-interactions": "warn",
    "jsx_a11y/prefer-tag-over-role": "deny",
    "jsx_a11y/role-has-required-aria-props": "deny",
    "jsx_a11y/role-supports-aria-props": "deny",
    "jsx_a11y/scope": "deny",
    "jsx_a11y/tabindex-no-positive": "deny",
    "no-async-promise-executor": "deny",
    "no-await-in-loop": "warn",
    "no-caller": "deny",
    "no-class-assign": "deny",
    "no-compare-neg-zero": "deny",
    "no-cond-assign": "deny",
    "no-console": "warn",
    "no-const-assign": "deny",
    "no-constant-binary-expression": "deny",
    "no-constant-condition": "deny",
    "no-control-regex": "deny",
    "no-debugger": "deny",
    "no-delete-var": "deny",
    "no-dupe-class-members": "deny",
    "no-dupe-else-if": "deny",
    "no-dupe-keys": "deny",
    "no-duplicate-case": "deny",
    "no-empty-character-class": "deny",
    "no-empty-pattern": "deny",
    "no-empty-static-block": "deny",
    "no-eval": "deny",
    "no-ex-assign": "deny",
    "no-extend-native": "deny",
    "no-extra-bind": "deny",
    "no-extra-boolean-cast": "deny",
    "no-func-assign": "deny",
    "no-global-assign": "deny",
    "no-import-assign": "deny",
    "no-invalid-regexp": "deny",
    "no-irregular-whitespace": "deny",
    "no-iterator": "deny",
    "no-loss-of-precision": "deny",
    "no-misleading-character-class": "deny",
    "no-new": "deny",
    "no-new-native-nonconstructor": "deny",
    "no-nonoctal-decimal-escape": "deny",
    "no-obj-calls": "deny",
    "no-param-reassign": "deny",
    "no-self-assign": "deny",
    "no-setter-return": "deny",
    "no-shadow": "deny",
    "no-shadow-restricted-names": "deny",
    "no-sparse-arrays": "deny",
    "no-this-before-super": "deny",
    "no-throw-literal": "deny",
    "no-unassigned-vars": "deny",
    "no-unexpected-multiline": "deny",
    "no-unmodified-loop-condition": "deny",
    "no-unneeded-ternary": "deny",
    "no-unsafe-finally": "deny",
    "no-unsafe-negation": "deny",
    "no-unsafe-optional-chaining": "deny",
    "no-unused-expressions": "deny",
    "no-unused-labels": "deny",
    "no-unused-private-class-members": "deny",
    "no-unused-vars": "deny",
    "no-useless-backreference": "deny",
    "no-useless-call": "warn",
    "no-useless-catch": "deny",
    "no-useless-concat": "deny",
    "no-useless-constructor": "deny",
    "no-useless-escape": "deny",
    "no-useless-rename": "deny",
    "no-var": "deny",
    "no-with": "deny",
    "oxc/approx-constant": "deny",
    "oxc/bad-array-method-on-arguments": "deny",
    "oxc/bad-char-at-comparison": "deny",
    "oxc/bad-comparison-sequence": "deny",
    "oxc/bad-min-max-func": "deny",
    "oxc/bad-object-literal-comparison": "deny",
    "oxc/bad-replace-all-arg": "deny",
    "oxc/const-comparisons": "deny",
    "oxc/double-comparisons": "deny",
    "oxc/erasing-op": "deny",
    "oxc/misrefactored-assign-op": "deny",
    "oxc/missing-throw": "deny",
    "oxc/no-accumulating-spread": "warn",
    "oxc/no-async-endpoint-handlers": "deny",
    "oxc/no-map-spread": "warn",
    "oxc/no-this-in-exported-function": "deny",
    "oxc/number-arg-out-of-range": "deny",
    "oxc/only-used-in-recursion": "deny",
    "oxc/uninvoked-array-callback": "deny",
    "prefer-const": "deny",
    "prefer-template": "deny",
    "preserve-caught-error": "deny",
    "promise/always-return": "deny",
    "promise/no-callback-in-promise": "warn",
    "promise/no-multiple-resolved": "deny",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "deny",
    "promise/no-promise-in-callback": "warn",
    "promise/no-return-wrap": "deny",
    "promise/param-names": "deny",
    "promise/valid-params": "deny",
    "react/exhaustive-deps": "deny",
    "react/forward-ref-uses-ref": "deny",
    "react/iframe-missing-sandbox": "deny",
    "react/jsx-key": "deny",
    "react/jsx-no-comment-textnodes": "deny",
    "react/jsx-no-constructed-context-values": "warn",
    "react/jsx-no-duplicate-props": "deny",
    "react/jsx-no-script-url": "deny",
    "react/jsx-no-target-blank": "deny",
    "react/jsx-no-undef": "deny",
    "react/jsx-props-no-spread-multi": "deny",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "deny",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "deny",
    "react/no-did-mount-set-state": "deny",
    "react/no-direct-mutation-state": "deny",
    "react/no-find-dom-node": "deny",
    "react/no-is-mounted": "deny",
    "react/no-namespace": "deny",
    "react/no-render-return-value": "deny",
    "react/no-string-refs": "deny",
    "react/no-this-in-sfc": "deny",
    "react/no-unescaped-entities": "deny",
    "react/no-unknown-property": "deny",
    "react/no-unsafe": "deny",
    "react/no-will-update-set-state": "deny",
    "react/react-in-jsx-scope": "deny",
    "react/require-render-return": "deny",
    "react/rules-of-hooks": "deny",
    "react/self-closing-comp": "deny",
    "react/style-prop-object": "deny",
    "react/void-dom-elements-no-children": "deny",
    "react_perf/jsx-no-jsx-as-prop": "warn",
    "react_perf/jsx-no-new-array-as-prop": "warn",
    "react_perf/jsx-no-new-function-as-prop": "warn",
    "react_perf/jsx-no-new-object-as-prop": "warn",
    "require-yield": "deny",
    "typescript/array-type": "deny",
    "typescript/await-thenable": "deny",
    "typescript/ban-ts-comment": "deny",
    "typescript/consistent-type-exports": "deny",
    "typescript/consistent-type-imports": "deny",
    "typescript/no-array-delete": "deny",
    "typescript/no-base-to-string": "deny",
    "typescript/no-confusing-non-null-assertion": "deny",
    "typescript/no-deprecated": "warn",
    "typescript/no-duplicate-enum-values": "deny",
    "typescript/no-duplicate-type-constituents": "deny",
    "typescript/no-empty-object-type": "deny",
    "typescript/no-explicit-any": "deny",
    "typescript/no-extra-non-null-assertion": "deny",
    "typescript/no-extraneous-class": "deny",
    "typescript/no-floating-promises": "deny",
    "typescript/no-for-in-array": "deny",
    "typescript/no-implied-eval": "deny",
    "typescript/no-import-type-side-effects": "deny",
    "typescript/no-meaningless-void-operator": "deny",
    "typescript/no-misused-new": "deny",
    "typescript/no-misused-promises": "deny",
    "typescript/no-misused-spread": "deny",
    "typescript/no-non-null-asserted-optional-chain": "deny",
    "typescript/no-non-null-assertion": "deny",
    "typescript/no-redundant-type-constituents": "deny",
    "typescript/no-require-imports": "deny",
    "typescript/no-this-alias": "deny",
    "typescript/no-unnecessary-boolean-literal-compare": "deny",
    "typescript/no-unnecessary-parameter-property-assignment": "deny",
    "typescript/no-unnecessary-template-expression": "deny",
    "typescript/no-unnecessary-type-arguments": "deny",
    "typescript/no-unnecessary-type-assertion": "deny",
    "typescript/no-unnecessary-type-constraint": "deny",
    "typescript/no-unsafe-declaration-merging": "deny",
    "typescript/no-unsafe-enum-comparison": "deny",
    "typescript/no-unsafe-function-type": "deny",
    "typescript/no-unsafe-type-assertion": "deny",
    "typescript/no-unsafe-unary-minus": "deny",
    "typescript/no-useless-empty-export": "deny",
    "typescript/no-wrapper-object-types": "deny",
    "typescript/prefer-as-const": "deny",
    "typescript/prefer-literal-enum-member": "deny",
    "typescript/prefer-namespace-keyword": "deny",
    "typescript/require-array-sort-compare": "deny",
    "typescript/restrict-template-expressions": "deny",
    "typescript/return-await": "deny",
    "typescript/triple-slash-reference": "deny",
    "typescript/unbound-method": "deny",
    "unicorn/consistent-function-scoping": "deny",
    "unicorn/no-accessor-recursion": "deny",
    "unicorn/no-array-for-each": "deny",
    "unicorn/no-array-reverse": "deny",
    "unicorn/no-array-sort": "deny",
    "unicorn/no-await-in-promise-methods": "deny",
    "unicorn/no-empty-file": "deny",
    "unicorn/no-instanceof-array": "deny",
    "unicorn/no-instanceof-builtins": "deny",
    "unicorn/no-invalid-fetch-options": "deny",
    "unicorn/no-invalid-remove-event-listener": "deny",
    "unicorn/no-new-array": "deny",
    "unicorn/no-single-promise-in-promise-methods": "deny",
    "unicorn/no-thenable": "deny",
    "unicorn/no-unnecessary-await": "deny",
    "unicorn/no-useless-fallback-in-spread": "deny",
    "unicorn/no-useless-length-check": "deny",
    "unicorn/no-useless-spread": "deny",
    "unicorn/no-useless-undefined": "allow",
    "unicorn/prefer-add-event-listener": "deny",
    "unicorn/prefer-array-find": "deny",
    "unicorn/prefer-array-flat": "deny",
    "unicorn/prefer-array-flat-map": "deny",
    "unicorn/prefer-array-some": "deny",
    "unicorn/prefer-includes": "deny",
    "unicorn/prefer-modern-dom-apis": "deny",
    "unicorn/prefer-node-protocol": "deny",
    "unicorn/prefer-set-has": "warn",
    "unicorn/prefer-set-size": "deny",
    "unicorn/prefer-string-starts-ends-with": "deny",
    "unicorn/require-module-specifiers": "deny",
    "unicorn/require-post-message-target-origin": "deny",
    "unicorn/throw-new-error": "deny",
    "use-isnan": "deny",
    "valid-typeof": "deny",
  },
  "settings": {
    "jsdoc": {
      "augmentsExtendsReplacesDocs": false,
      "exemptDestructuredRootsFromChecks": false,
      "ignoreInternal": false,
      "ignorePrivate": false,
      "ignoreReplacesDocs": true,
      "implementsReplacesDocs": false,
      "overrideReplacesDocs": true,
      "tagNamePreference": {},
    },
    "jsx-a11y": {
      "attributes": {},
      "components": {},
      "polymorphicPropName": null,
    },
    "next": {
      "rootDir": [],
    },
    "react": {
      "componentWrapperFunctions": [],
      "formComponents": [],
      "linkComponents": [],
      "version": null,
    },
    "vitest": {
      "typecheck": false,
    },
  },
}
`;

exports[`print-config snapshots > test 1`] = `
{
  "categories": {},
  "env": {
    "builtin": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "overrides": [
    {
      "env": null,
      "files": [
        "**/*.test.ts",
        "**/*.test.tsx",
        "**/*.spec.ts",
        "**/*.spec.tsx",
      ],
      "globals": null,
      "plugins": [
        "jest",
        "vitest",
      ],
      "rules": {
        "jest/expect-expect": "deny",
        "jest/no-conditional-expect": "deny",
        "jest/no-conditional-in-test": "deny",
        "jest/no-disabled-tests": "warn",
        "jest/no-export": "deny",
        "jest/no-focused-tests": "deny",
        "jest/no-identical-title": "deny",
        "jest/no-standalone-expect": "deny",
        "jest/no-test-return-statement": "deny",
        "jest/prefer-to-be": "warn",
        "jest/prefer-to-contain": "warn",
        "jest/prefer-to-have-length": "warn",
        "jest/valid-describe-callback": "deny",
        "jest/valid-expect": "deny",
        "jest/valid-title": "deny",
        "typescript/no-explicit-any": "allow",
        "typescript/no-floating-promises": "allow",
        "typescript/no-misused-promises": "allow",
        "typescript/no-non-null-assertion": "allow",
        "vitest/consistent-each-for": "warn",
        "vitest/hoisted-apis-on-top": "deny",
        "vitest/no-conditional-tests": "deny",
        "vitest/no-import-node-test": "deny",
        "vitest/no-importing-vitest-globals": "deny",
        "vitest/require-awaited-expect-poll": "deny",
        "vitest/require-local-test-context-for-concurrent-snapshots": "deny",
      },
    },
  ],
  "plugins": [
    "unicorn",
    "typescript",
    "oxc",
  ],
  "rules": {
    "block-scoped-var": "deny",
    "constructor-super": "deny",
    "eqeqeq": "deny",
    "for-direction": "deny",
    "import/default": "deny",
    "import/namespace": "deny",
    "import/no-absolute-path": "deny",
    "import/no-cycle": "deny",
    "import/no-default-export": "warn",
    "import/no-duplicates": "deny",
    "import/no-empty-named-blocks": "deny",
    "import/no-mutable-exports": "deny",
    "import/no-named-as-default": "deny",
    "import/no-named-as-default-member": "deny",
    "import/no-self-import": "deny",
    "import/no-unassigned-import": "deny",
    "no-async-promise-executor": "deny",
    "no-await-in-loop": "warn",
    "no-caller": "deny",
    "no-class-assign": "deny",
    "no-compare-neg-zero": "deny",
    "no-cond-assign": "deny",
    "no-console": "warn",
    "no-const-assign": "deny",
    "no-constant-binary-expression": "deny",
    "no-constant-condition": "deny",
    "no-control-regex": "deny",
    "no-debugger": "deny",
    "no-delete-var": "deny",
    "no-dupe-class-members": "deny",
    "no-dupe-else-if": "deny",
    "no-dupe-keys": "deny",
    "no-duplicate-case": "deny",
    "no-empty-character-class": "deny",
    "no-empty-pattern": "deny",
    "no-empty-static-block": "deny",
    "no-eval": "deny",
    "no-ex-assign": "deny",
    "no-extend-native": "deny",
    "no-extra-bind": "deny",
    "no-extra-boolean-cast": "deny",
    "no-func-assign": "deny",
    "no-global-assign": "deny",
    "no-import-assign": "deny",
    "no-invalid-regexp": "deny",
    "no-irregular-whitespace": "deny",
    "no-iterator": "deny",
    "no-loss-of-precision": "deny",
    "no-misleading-character-class": "deny",
    "no-new": "deny",
    "no-new-native-nonconstructor": "deny",
    "no-nonoctal-decimal-escape": "deny",
    "no-obj-calls": "deny",
    "no-param-reassign": "deny",
    "no-self-assign": "deny",
    "no-setter-return": "deny",
    "no-shadow": "deny",
    "no-shadow-restricted-names": "deny",
    "no-sparse-arrays": "deny",
    "no-this-before-super": "deny",
    "no-throw-literal": "deny",
    "no-unassigned-vars": "deny",
    "no-unexpected-multiline": "deny",
    "no-unmodified-loop-condition": "deny",
    "no-unneeded-ternary": "deny",
    "no-unsafe-finally": "deny",
    "no-unsafe-negation": "deny",
    "no-unsafe-optional-chaining": "deny",
    "no-unused-expressions": "deny",
    "no-unused-labels": "deny",
    "no-unused-private-class-members": "deny",
    "no-unused-vars": "deny",
    "no-useless-backreference": "deny",
    "no-useless-call": "warn",
    "no-useless-catch": "deny",
    "no-useless-concat": "deny",
    "no-useless-constructor": "deny",
    "no-useless-escape": "deny",
    "no-useless-rename": "deny",
    "no-var": "deny",
    "no-with": "deny",
    "oxc/approx-constant": "deny",
    "oxc/bad-array-method-on-arguments": "deny",
    "oxc/bad-char-at-comparison": "deny",
    "oxc/bad-comparison-sequence": "deny",
    "oxc/bad-min-max-func": "deny",
    "oxc/bad-object-literal-comparison": "deny",
    "oxc/bad-replace-all-arg": "deny",
    "oxc/const-comparisons": "deny",
    "oxc/double-comparisons": "deny",
    "oxc/erasing-op": "deny",
    "oxc/misrefactored-assign-op": "deny",
    "oxc/missing-throw": "deny",
    "oxc/no-accumulating-spread": "warn",
    "oxc/no-async-endpoint-handlers": "deny",
    "oxc/no-map-spread": "warn",
    "oxc/no-this-in-exported-function": "deny",
    "oxc/number-arg-out-of-range": "deny",
    "oxc/only-used-in-recursion": "deny",
    "oxc/uninvoked-array-callback": "deny",
    "prefer-const": "deny",
    "prefer-template": "deny",
    "preserve-caught-error": "deny",
    "promise/always-return": "deny",
    "promise/no-callback-in-promise": "warn",
    "promise/no-multiple-resolved": "deny",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "deny",
    "promise/no-promise-in-callback": "warn",
    "promise/no-return-wrap": "deny",
    "promise/param-names": "deny",
    "promise/valid-params": "deny",
    "require-yield": "deny",
    "typescript/array-type": "deny",
    "typescript/await-thenable": "deny",
    "typescript/ban-ts-comment": "deny",
    "typescript/consistent-type-exports": "deny",
    "typescript/consistent-type-imports": "deny",
    "typescript/no-array-delete": "deny",
    "typescript/no-base-to-string": "deny",
    "typescript/no-confusing-non-null-assertion": "deny",
    "typescript/no-deprecated": "warn",
    "typescript/no-duplicate-enum-values": "deny",
    "typescript/no-duplicate-type-constituents": "deny",
    "typescript/no-empty-object-type": "deny",
    "typescript/no-explicit-any": "deny",
    "typescript/no-extra-non-null-assertion": "deny",
    "typescript/no-extraneous-class": "deny",
    "typescript/no-floating-promises": "deny",
    "typescript/no-for-in-array": "deny",
    "typescript/no-implied-eval": "deny",
    "typescript/no-import-type-side-effects": "deny",
    "typescript/no-meaningless-void-operator": "deny",
    "typescript/no-misused-new": "deny",
    "typescript/no-misused-promises": "deny",
    "typescript/no-misused-spread": "deny",
    "typescript/no-non-null-asserted-optional-chain": "deny",
    "typescript/no-non-null-assertion": "deny",
    "typescript/no-redundant-type-constituents": "deny",
    "typescript/no-require-imports": "deny",
    "typescript/no-this-alias": "deny",
    "typescript/no-unnecessary-boolean-literal-compare": "deny",
    "typescript/no-unnecessary-parameter-property-assignment": "deny",
    "typescript/no-unnecessary-template-expression": "deny",
    "typescript/no-unnecessary-type-arguments": "deny",
    "typescript/no-unnecessary-type-assertion": "deny",
    "typescript/no-unnecessary-type-constraint": "deny",
    "typescript/no-unsafe-declaration-merging": "deny",
    "typescript/no-unsafe-enum-comparison": "deny",
    "typescript/no-unsafe-function-type": "deny",
    "typescript/no-unsafe-type-assertion": "deny",
    "typescript/no-unsafe-unary-minus": "deny",
    "typescript/no-useless-empty-export": "deny",
    "typescript/no-wrapper-object-types": "deny",
    "typescript/prefer-as-const": "deny",
    "typescript/prefer-literal-enum-member": "deny",
    "typescript/prefer-namespace-keyword": "deny",
    "typescript/require-array-sort-compare": "deny",
    "typescript/restrict-template-expressions": "deny",
    "typescript/return-await": "deny",
    "typescript/triple-slash-reference": "deny",
    "typescript/unbound-method": "deny",
    "unicorn/consistent-function-scoping": "deny",
    "unicorn/no-accessor-recursion": "deny",
    "unicorn/no-array-for-each": "deny",
    "unicorn/no-array-reverse": "deny",
    "unicorn/no-array-sort": "deny",
    "unicorn/no-await-in-promise-methods": "deny",
    "unicorn/no-empty-file": "deny",
    "unicorn/no-instanceof-array": "deny",
    "unicorn/no-instanceof-builtins": "deny",
    "unicorn/no-invalid-fetch-options": "deny",
    "unicorn/no-invalid-remove-event-listener": "deny",
    "unicorn/no-new-array": "deny",
    "unicorn/no-single-promise-in-promise-methods": "deny",
    "unicorn/no-thenable": "deny",
    "unicorn/no-unnecessary-await": "deny",
    "unicorn/no-useless-fallback-in-spread": "deny",
    "unicorn/no-useless-length-check": "deny",
    "unicorn/no-useless-spread": "deny",
    "unicorn/no-useless-undefined": "allow",
    "unicorn/prefer-add-event-listener": "deny",
    "unicorn/prefer-array-find": "deny",
    "unicorn/prefer-array-flat": "deny",
    "unicorn/prefer-array-flat-map": "deny",
    "unicorn/prefer-array-some": "deny",
    "unicorn/prefer-includes": "deny",
    "unicorn/prefer-modern-dom-apis": "deny",
    "unicorn/prefer-node-protocol": "deny",
    "unicorn/prefer-set-has": "warn",
    "unicorn/prefer-set-size": "deny",
    "unicorn/prefer-string-starts-ends-with": "deny",
    "unicorn/require-module-specifiers": "deny",
    "unicorn/require-post-message-target-origin": "deny",
    "unicorn/throw-new-error": "deny",
    "use-isnan": "deny",
    "valid-typeof": "deny",
  },
  "settings": {
    "jsdoc": {
      "augmentsExtendsReplacesDocs": false,
      "exemptDestructuredRootsFromChecks": false,
      "ignoreInternal": false,
      "ignorePrivate": false,
      "ignoreReplacesDocs": true,
      "implementsReplacesDocs": false,
      "overrideReplacesDocs": true,
      "tagNamePreference": {},
    },
    "jsx-a11y": {
      "attributes": {},
      "components": {},
      "polymorphicPropName": null,
    },
    "next": {
      "rootDir": [],
    },
    "react": {
      "componentWrapperFunctions": [],
      "formComponents": [],
      "linkComponents": [],
      "version": null,
    },
    "vitest": {
      "typecheck": false,
    },
  },
}
`;

exports[`print-config snapshots > typescript 1`] = `
{
  "categories": {},
  "env": {
    "builtin": true,
  },
  "globals": {},
  "ignorePatterns": [],
  "plugins": [
    "unicorn",
    "typescript",
    "oxc",
  ],
  "rules": {
    "block-scoped-var": "deny",
    "constructor-super": "deny",
    "eqeqeq": "deny",
    "for-direction": "deny",
    "import/default": "deny",
    "import/namespace": "deny",
    "import/no-absolute-path": "deny",
    "import/no-cycle": "deny",
    "import/no-default-export": "warn",
    "import/no-duplicates": "deny",
    "import/no-empty-named-blocks": "deny",
    "import/no-mutable-exports": "deny",
    "import/no-named-as-default": "deny",
    "import/no-named-as-default-member": "deny",
    "import/no-self-import": "deny",
    "import/no-unassigned-import": "deny",
    "no-async-promise-executor": "deny",
    "no-await-in-loop": "warn",
    "no-caller": "deny",
    "no-class-assign": "deny",
    "no-compare-neg-zero": "deny",
    "no-cond-assign": "deny",
    "no-console": "warn",
    "no-const-assign": "deny",
    "no-constant-binary-expression": "deny",
    "no-constant-condition": "deny",
    "no-control-regex": "deny",
    "no-debugger": "deny",
    "no-delete-var": "deny",
    "no-dupe-class-members": "deny",
    "no-dupe-else-if": "deny",
    "no-dupe-keys": "deny",
    "no-duplicate-case": "deny",
    "no-empty-character-class": "deny",
    "no-empty-pattern": "deny",
    "no-empty-static-block": "deny",
    "no-eval": "deny",
    "no-ex-assign": "deny",
    "no-extend-native": "deny",
    "no-extra-bind": "deny",
    "no-extra-boolean-cast": "deny",
    "no-func-assign": "deny",
    "no-global-assign": "deny",
    "no-import-assign": "deny",
    "no-invalid-regexp": "deny",
    "no-irregular-whitespace": "deny",
    "no-iterator": "deny",
    "no-loss-of-precision": "deny",
    "no-misleading-character-class": "deny",
    "no-new": "deny",
    "no-new-native-nonconstructor": "deny",
    "no-nonoctal-decimal-escape": "deny",
    "no-obj-calls": "deny",
    "no-param-reassign": "deny",
    "no-self-assign": "deny",
    "no-setter-return": "deny",
    "no-shadow": "deny",
    "no-shadow-restricted-names": "deny",
    "no-sparse-arrays": "deny",
    "no-this-before-super": "deny",
    "no-throw-literal": "deny",
    "no-unassigned-vars": "deny",
    "no-unexpected-multiline": "deny",
    "no-unmodified-loop-condition": "deny",
    "no-unneeded-ternary": "deny",
    "no-unsafe-finally": "deny",
    "no-unsafe-negation": "deny",
    "no-unsafe-optional-chaining": "deny",
    "no-unused-expressions": "deny",
    "no-unused-labels": "deny",
    "no-unused-private-class-members": "deny",
    "no-unused-vars": "deny",
    "no-useless-backreference": "deny",
    "no-useless-call": "warn",
    "no-useless-catch": "deny",
    "no-useless-concat": "deny",
    "no-useless-constructor": "deny",
    "no-useless-escape": "deny",
    "no-useless-rename": "deny",
    "no-var": "deny",
    "no-with": "deny",
    "oxc/approx-constant": "deny",
    "oxc/bad-array-method-on-arguments": "deny",
    "oxc/bad-char-at-comparison": "deny",
    "oxc/bad-comparison-sequence": "deny",
    "oxc/bad-min-max-func": "deny",
    "oxc/bad-object-literal-comparison": "deny",
    "oxc/bad-replace-all-arg": "deny",
    "oxc/const-comparisons": "deny",
    "oxc/double-comparisons": "deny",
    "oxc/erasing-op": "deny",
    "oxc/misrefactored-assign-op": "deny",
    "oxc/missing-throw": "deny",
    "oxc/no-accumulating-spread": "warn",
    "oxc/no-async-endpoint-handlers": "deny",
    "oxc/no-map-spread": "warn",
    "oxc/no-this-in-exported-function": "deny",
    "oxc/number-arg-out-of-range": "deny",
    "oxc/only-used-in-recursion": "deny",
    "oxc/uninvoked-array-callback": "deny",
    "prefer-const": "deny",
    "prefer-template": "deny",
    "preserve-caught-error": "deny",
    "promise/always-return": "deny",
    "promise/no-callback-in-promise": "warn",
    "promise/no-multiple-resolved": "deny",
    "promise/no-nesting": "warn",
    "promise/no-new-statics": "deny",
    "promise/no-promise-in-callback": "warn",
    "promise/no-return-wrap": "deny",
    "promise/param-names": "deny",
    "promise/valid-params": "deny",
    "require-yield": "deny",
    "typescript/array-type": "deny",
    "typescript/await-thenable": "deny",
    "typescript/ban-ts-comment": "deny",
    "typescript/consistent-type-exports": "deny",
    "typescript/consistent-type-imports": "deny",
    "typescript/no-array-delete": "deny",
    "typescript/no-base-to-string": "deny",
    "typescript/no-confusing-non-null-assertion": "deny",
    "typescript/no-deprecated": "warn",
    "typescript/no-duplicate-enum-values": "deny",
    "typescript/no-duplicate-type-constituents": "deny",
    "typescript/no-empty-object-type": "deny",
    "typescript/no-explicit-any": "deny",
    "typescript/no-extra-non-null-assertion": "deny",
    "typescript/no-extraneous-class": "deny",
    "typescript/no-floating-promises": "deny",
    "typescript/no-for-in-array": "deny",
    "typescript/no-implied-eval": "deny",
    "typescript/no-import-type-side-effects": "deny",
    "typescript/no-meaningless-void-operator": "deny",
    "typescript/no-misused-new": "deny",
    "typescript/no-misused-promises": "deny",
    "typescript/no-misused-spread": "deny",
    "typescript/no-non-null-asserted-optional-chain": "deny",
    "typescript/no-non-null-assertion": "deny",
    "typescript/no-redundant-type-constituents": "deny",
    "typescript/no-require-imports": "deny",
    "typescript/no-this-alias": "deny",
    "typescript/no-unnecessary-boolean-literal-compare": "deny",
    "typescript/no-unnecessary-parameter-property-assignment": "deny",
    "typescript/no-unnecessary-template-expression": "deny",
    "typescript/no-unnecessary-type-arguments": "deny",
    "typescript/no-unnecessary-type-assertion": "deny",
    "typescript/no-unnecessary-type-constraint": "deny",
    "typescript/no-unsafe-declaration-merging": "deny",
    "typescript/no-unsafe-enum-comparison": "deny",
    "typescript/no-unsafe-function-type": "deny",
    "typescript/no-unsafe-type-assertion": "deny",
    "typescript/no-unsafe-unary-minus": "deny",
    "typescript/no-useless-empty-export": "deny",
    "typescript/no-wrapper-object-types": "deny",
    "typescript/prefer-as-const": "deny",
    "typescript/prefer-literal-enum-member": "deny",
    "typescript/prefer-namespace-keyword": "deny",
    "typescript/require-array-sort-compare": "deny",
    "typescript/restrict-template-expressions": "deny",
    "typescript/return-await": "deny",
    "typescript/triple-slash-reference": "deny",
    "typescript/unbound-method": "deny",
    "unicorn/consistent-function-scoping": "deny",
    "unicorn/no-accessor-recursion": "deny",
    "unicorn/no-array-for-each": "deny",
    "unicorn/no-array-reverse": "deny",
    "unicorn/no-array-sort": "deny",
    "unicorn/no-await-in-promise-methods": "deny",
    "unicorn/no-empty-file": "deny",
    "unicorn/no-instanceof-array": "deny",
    "unicorn/no-instanceof-builtins": "deny",
    "unicorn/no-invalid-fetch-options": "deny",
    "unicorn/no-invalid-remove-event-listener": "deny",
    "unicorn/no-new-array": "deny",
    "unicorn/no-single-promise-in-promise-methods": "deny",
    "unicorn/no-thenable": "deny",
    "unicorn/no-unnecessary-await": "deny",
    "unicorn/no-useless-fallback-in-spread": "deny",
    "unicorn/no-useless-length-check": "deny",
    "unicorn/no-useless-spread": "deny",
    "unicorn/no-useless-undefined": "allow",
    "unicorn/prefer-add-event-listener": "deny",
    "unicorn/prefer-array-find": "deny",
    "unicorn/prefer-array-flat": "deny",
    "unicorn/prefer-array-flat-map": "deny",
    "unicorn/prefer-array-some": "deny",
    "unicorn/prefer-includes": "deny",
    "unicorn/prefer-modern-dom-apis": "deny",
    "unicorn/prefer-node-protocol": "deny",
    "unicorn/prefer-set-has": "warn",
    "unicorn/prefer-set-size": "deny",
    "unicorn/prefer-string-starts-ends-with": "deny",
    "unicorn/require-module-specifiers": "deny",
    "unicorn/require-post-message-target-origin": "deny",
    "unicorn/throw-new-error": "deny",
    "use-isnan": "deny",
    "valid-typeof": "deny",
  },
  "settings": {
    "jsdoc": {
      "augmentsExtendsReplacesDocs": false,
      "exemptDestructuredRootsFromChecks": false,
      "ignoreInternal": false,
      "ignorePrivate": false,
      "ignoreReplacesDocs": true,
      "implementsReplacesDocs": false,
      "overrideReplacesDocs": true,
      "tagNamePreference": {},
    },
    "jsx-a11y": {
      "attributes": {},
      "components": {},
      "polymorphicPropName": null,
    },
    "next": {
      "rootDir": [],
    },
    "react": {
      "componentWrapperFunctions": [],
      "formComponents": [],
      "linkComponents": [],
      "version": null,
    },
    "vitest": {
      "typecheck": false,
    },
  },
}
`;
